--- a/src/main/resources/templates/paziente/registrazione.html
+++ b/src/main/resources/templates/paziente/registrazione.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it" xmlns:th="http://www.thymeleaf.org">>
 	<head>
 		<meta charset="UTF-8">
 		<title>Registrazione</title>
@@ -12,10 +12,11 @@
 		<div class="col-3"></div>
 		<div class="col">
 			<div class="jumbotron">
-				<form>
+				<form action="/paziente/registrati/submit" method="post">
 					<h1 class="display-4">Registrati</h1>
 					<p class="lead">Form di registrazione per i pazienti</p>
 					<hr class="my-4">
+					<div th:if="${alert != null}" th:utext="${alert.getRawHtml()}" th:remove="tag"></div>
 					<table class="table table-borderless">
 						<tr>
 							<td>
@@ -121,4 +122,11 @@
 		<div class="col-3"></div>
 
 	</body>
+	<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+			integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+			crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+			crossorigin="anonymous"></script>
+	<script src="/init.js"></script>
 </html>
