--- a/src/main/resources/templates/paziente/registrazione.html
+++ b/src/main/resources/templates/paziente/registrazione.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" xmlns:th="http://www.thymeleaf.org">>
+<html lang="it" xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
 		<title>Registrazione</title>
@@ -12,10 +12,15 @@
 		<div class="col-3"></div>
 		<div class="col">
 			<div class="jumbotron">
-				<form action="/paziente/registrati/submit" method="post">
-					<h1 class="display-4">Registrati</h1>
-					<p class="lead">Form di registrazione per i pazienti</p>
+				<form action="registrati/submit" method="post">
+
+					<div class="d-flex justify-content-between align-items-center">
+						<h1 class="display-4">Registrati</h1>
+						<div th:replace="fragments/navbar :: navbar"></div>
+					</div>
+					<p class="lead">Registrazione area pazienti</p>
 					<hr class="my-4">
+
 					<div th:if="${alert != null}" th:utext="${alert.getRawHtml()}" th:remove="tag"></div>
 					<table class="table table-borderless">
 						<tr>
@@ -112,10 +117,13 @@
 						</tr>
 					</table>
 
-					<input class="btn btn-primary btn-lg"
-							type="submit" value="Registrati"/>
-					<input class="btn btn-primary btn-lg"
-							type="reset" value="Cancella"/>
+					<div class="d-flex justify-content-start">
+						<input class="btn btn-primary btn-lg m-1"
+								type="submit" value="Registrati"/>
+						<input class="btn btn-primary btn-lg m-1"
+								type="reset" value="Cancella"/>
+					</div>
+
 				</form>
 			</div>
 		</div>
