--- a/src/main/resources/templates/action_success.html
+++ b/src/main/resources/templates/action_success.html
@@ -9,9 +9,9 @@
 	</head>
 	<body>
 
-		<div class="mx-auto my-4">
+		<div class="mx-auto my-4 text-center">
 			<div class="d-flex-column justify-content-center">
-				<div class="display-4 mx-auto" th:text="${message}">Azione effettuata</div>
+				<h1 class="display-4 mx-auto" th:text="${message}">Azione effettuata</h1>
 				<a th:href="${nextUrl}" href="#">Clicca qui per proseguire</a>
 			</div>
 		</div>
