--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -12,33 +12,23 @@
 
 		<div class="col">
 			<div class="jumbotron">
-				<h1 class="display-4"><b>Rosalind Franklin</b></h1>
-				<p class="lead">Campus Bio-Medico</p>
+				<div class="text-center">
+					<h1 class="display-4"><b>Rosalind Franklin</b></h1>
+					<p class="lead">Campus Bio-Medico</p>
+				</div>
+
 				<hr class="my-4">
 
-				<!-- Area Pazienti -->
-				<div class="row">
-					<h1 class="d-inline my-auto col-8">Area Pazienti</h1>
-					<div class="d-flex justify-content-start align-items-center">
-						<a class="btn btn-lg btn-primary m-2" href="/paziente/accedi">Accedi</a>
-						<a class="btn btn-lg btn-primary m-2" href="/paziente/registrati">Registrati</a>
+				<div class="d-flex flex-column">
+					<h1 class="my-2">Area Pazienti</h1>
+					<div class="row">
+						<a class="col btn btn-lg btn-primary m-2" href="/paziente/accedi">Accedi</a>
+						<a class="col btn btn-lg btn-primary m-2" href="/paziente/registrati">Registrati</a>
 					</div>
-				</div>
-
-				<!-- Area Medici -->
-				<div class="row">
-					<h1 class="d-inline my-auto col-8">Area Medici</h1>
-					<div class="d-flex justify-content-start align-items-center">
-						<a class="btn btn-lg btn-primary m-2" href="/medico/accedi">Accedi</a>
-					</div>
-				</div>
-
-				<!-- Area Amministratori -->
-				<div class="row">
-					<h1 class="d-inline my-auto col-8">Area Amministratori</h1>
-					<div class="d-flex justify-content-start align-items-center">
-						<a class="btn btn-lg btn-primary m-2" href="/amministratore/accedi">Accedi</a>
-					</div>
+					<h1 class="my-3">Area Medici</h1>
+					<a class="btn btn-lg btn-primary my-2" href="/medico/accedi">Accedi</a>
+					<h1 class="my-3">Area Amministratori</h1>
+					<a class="btn btn-lg btn-primary my-2" href="/amministratore/accedi">Accedi</a>
 				</div>
 
 			</div>
