--- a/src/main/resources/templates/paziente/dashboard.html
+++ b/src/main/resources/templates/paziente/dashboard.html
@@ -66,8 +66,8 @@
 					<div class="form-row">
 						<!-- Via Residenza -->
 						<div class="form-group col-7">
-							<label for="via">Via Residenza</label>
-							<input type="text" id="via" name="via" class="form-control"
+							<label for="viaResidenza">Via Residenza</label>
+							<input type="text" id="viaResidenza" name="viaResidenza" class="form-control"
 									th:value="*{viaResidenza}" value="Via Roma, 11"/>
 						</div>
 						<!-- Citta' -->
