--- a/src/main/resources/templates/medico/accesso.html
+++ b/src/main/resources/templates/medico/accesso.html
@@ -18,7 +18,7 @@
 						<h1 class="display-4">Accedi</h1>
 						<div th:replace="fragments/navbar :: main"></div>
 					</div>
-					<p class="lead">Accesso area pazienti</p>
+					<p class="lead">Accesso area medici</p>
 					<hr class="my-4">
 
 					<div th:if="${alert != null}" th:utext="${alert.getRawHtml()}" th:remove="tag"></div>
