--- a/src/main/resources/templates/paziente/registrazione.html
+++ b/src/main/resources/templates/paziente/registrazione.html
@@ -16,7 +16,7 @@
 
 					<div class="d-flex justify-content-between align-items-center">
 						<h1 class="display-4">Registrati</h1>
-						<div th:replace="fragments/navbar :: navbar"></div>
+						<div th:replace="fragments/navbar :: main"></div>
 					</div>
 					<p class="lead">Registrazione area pazienti</p>
 					<hr class="my-4">
