--- a/src/main/resources/templates/paziente/prenotazione.html
+++ b/src/main/resources/templates/paziente/prenotazione.html
@@ -16,7 +16,7 @@
 
 					<div class="d-flex justify-content-between align-items-center">
 						<h1 class="display-4">Prenota</h1>
-						<div th:replace="fragments/pazienti_navbar :: navbar"></div>
+						<div th:replace="fragments/navbar :: paziente"></div>
 					</div>
 					<p class="lead">Prenota una visita</p>
 					<hr class="my-4">
