--- a/src/main/resources/templates/medico/dashboard.html
+++ b/src/main/resources/templates/medico/dashboard.html
@@ -27,19 +27,19 @@
 						<!-- Nome -->
 						<div class="form-group col">
 							<label for="nome">Nome</label>
-							<input type="text" id="nome" name="nome" class="form-control"
+							<input type="text" id="nome" name="nome" class="form-control bg-white"
 									th:value="*{nome}" value="Emanuele" readonly/>
 						</div>
 						<!-- Cognome -->
 						<div class="form-group col">
 							<label for="cognome">Cognome</label>
-							<input type="text" id="cognome" name="cognome" class="form-control"
+							<input type="text" id="cognome" name="cognome" class="form-control bg-white"
 									th:value="*{cognome}" value="Scaccia" readonly/>
 						</div>
 						<!-- Codice Fiscale -->
 						<div class="form-group col">
 							<label for="codiceFiscale">Codice Fiscale</label>
-							<input type="text" id="codiceFiscale" name="codiceFiscale" class="form-control"
+							<input type="text" id="codiceFiscale" name="codiceFiscale" class="form-control bg-white"
 									th:value="*{codiceFiscale}" value="ABCDEF123GHI456J" readonly/>
 						</div>
 					</div>
@@ -47,7 +47,7 @@
 						<!-- Data Nascita -->
 						<div class="form-group col-3">
 							<label for="dataNascita">Data Nascita</label>
-							<input type="date" class="form-control col" id="dataNascita" name="dataNascita"
+							<input type="date" class="form-control col bg-white" id="dataNascita" name="dataNascita"
 									th:value="*{dataNascita}" value="01/01/1970" readonly/>
 						</div>
 						<!-- Email -->
@@ -99,5 +99,4 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
 			crossorigin="anonymous"></script>
-	<script src="/init.js"></script>
 </html>
