--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -28,7 +28,7 @@
 					<h1 class="my-3">Area Medici</h1>
 					<a class="btn btn-lg btn-primary my-2" href="/medico/accedi">Accedi</a>
 					<h1 class="my-3">Area Amministratori</h1>
-					<a class="btn btn-lg btn-primary my-2" href="/amministratore/accedi">Accedi</a>
+					<a class="btn btn-lg btn-primary my-2" href="/admin/accedi">Accedi</a>
 				</div>
 
 			</div>
