Checkbox checked fix

--- a/src/main/resources/templates/medico/lista_prenotazioni.html
+++ b/src/main/resources/templates/medico/lista_prenotazioni.html
@@ -33,7 +33,7 @@
 
 					<div class="custom-control custom-checkbox">
 						<input type="checkbox" class="custom-control-input m-2"
-								id="medicoPrenotante" name="medicoPrenotante" th:value="${medicoPrenotante}"/>
+								id="medicoPrenotante" name="medicoPrenotante" th:checked="${medicoPrenotante}"/>
 						<label for="medicoPrenotante" class="custom-control-label m-2">Prenotato da medico</label>
 					</div>
 
